Fixed blog heading size on small screens

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -33,7 +33,7 @@ h1.post-title {
 .post-title {
   margin-top:4%;
   font-family:"Couture", "DIN Condensed", sans-serif;
-  font-size:1.5vw;
+  font-size:100%;
 }
 
 .post-link {
@@ -66,7 +66,7 @@ h3.post-time {
 }
 
 .post-time {
-  font-size:1vw;
+  font-size:50%;
   color:$darkgrey;
 }
 
